<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/content_description_create_task"
    tools:context=".presentation.ui.createtask.CreateTaskFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="64dp">

        <TextView
            android:id="@+id/textView_taskTitle"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_taskDescription"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="@+id/editText_taskTitle"
            app:layout_constraintStart_toStartOf="@+id/editText_taskTitle"
            app:layout_constraintTop_toBottomOf="@+id/editText_taskTitle" />

        <EditText
            android:id="@+id/editText_taskTitle"
            style="@style/Widget.AppCompat.EditText.MainTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/task_title"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/textView_taskTitle"
            app:layout_constraintStart_toStartOf="@+id/textView_taskTitle"
            app:layout_constraintTop_toBottomOf="@+id/textView_taskTitle" />

        <EditText
            android:id="@+id/editText_taskDescription"
            style="@style/Widget.AppCompat.EditText.MainTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/task_description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/textView_taskDescription"
            app:layout_constraintStart_toStartOf="@+id/textView_taskDescription"
            app:layout_constraintTop_toBottomOf="@+id/textView_taskDescription" />

        <Button
            android:id="@+id/button_createTask"
            style="@style/Widget.MaterialComponents.Button.MainButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/create"
            app:layout_constraintEnd_toEndOf="@+id/textView_taskTitle"
            app:layout_constraintStart_toStartOf="@+id/textView_taskTitle"
            app:layout_constraintTop_toBottomOf="@+id/imageView_takePicture" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/picture_optional"
            app:layout_constraintStart_toStartOf="@+id/editText_taskDescription"
            app:layout_constraintTop_toBottomOf="@+id/editText_taskDescription" />

        <ImageButton
            android:id="@+id/imageView_takePicture"
            style="@style/Widget.MaterialComponents.Button.MainCircleButton"
            android:layout_width="64dp"
            android:layout_height="64dp"

            android:layout_marginTop="8dp"
            android:contentDescription="@string/button_to_take_picture"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_camera_alt_24"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:tint="@color/white" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageView_preview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_takePicture"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="@+id/imageView_takePicture"
            app:layout_constraintStart_toStartOf="@+id/imageView_takePicture"
            app:layout_constraintTop_toTopOf="@+id/imageView_takePicture"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            tools:src="@tools:sample/avatars"
            tools:visibility="gone" />

        <ImageButton
            android:id="@+id/imageButton_deletePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@null"
            android:src="@drawable/ic_baseline_delete_24"
            app:tint="@android:color/holo_red_dark"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_takePicture"
            app:layout_constraintStart_toEndOf="@+id/imageView_takePicture"
            app:layout_constraintTop_toTopOf="@+id/imageView_takePicture"
            tools:visibility="visible"
            android:contentDescription="@string/button_to_remove_taken_picture" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>